--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,33 @@
 {
     "compile-hero.disable-compile-files-on-did-save-code": true,
     "editor.renameOnType": true,
-    "editor.suggest.snippetsPreventQuickSuggestions": false
+    "editor.suggest.snippetsPreventQuickSuggestions": false,
+      //由于prettier不能格式化vue文件template  所以使用js-beautify-html格式化
+    "vetur.format.defaultFormatter.html":"js-beautify-html", 
+    "vetur.format.defaultFormatterOptions": {
+        "js-beautify-html": {
+            "wrap_attributes": "force-aligned" //属性强制折行对齐
+        }
+    },
+    "eslint.autoFixOnSave": true,  //保存时使用自动格式化
+    "eslint.validate": [   //验证文件类型
+        "javascript",
+        "javascriptreact",
+        "vue",
+        "html",
+        "jsx",
+        {
+            "language": "html",
+            "autoFix": true
+        },
+        {
+            "language": "vue",
+            "autoFix": true
+        }
+    ],
+    "prettier.singleQuote": true, //使用单引号而不是双引号
+    "prettier.jsxBracketSameLine": true,
+    "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": true
+    }, //将>多行JSX元素放在最后一行的末尾，而不是单独放在下一行
 }
